syntax = "proto3";
package coolcar;
option go_package="coolcar/proto/gen/go;trippb";
message Location{
    double latitude = 1;
    double longtitude = 2;
}
enum TripStatus{
    TS_NOT_SPECIFIED = 0;
    NOT_STARTED = 1;
    IN_PROGRESS = 2;
    FINISHED = 3;
    PAID = 4;
}
message Trip{
    string start  = 1;// 赋值为第几个字段
    string end  = 2;
    int32 duration_sec = 3;
    Location start_pos = 5;
    int32 fee_cent = 4;
    Location end_pos = 6;
    repeated Location path_locations = 7;
    TripStatus status = 8;
}
// 开service 传输数据
service TripService{
    rpc GetTrip (GetTripRequest) returns (GetTripResponse);
}


message GetTripRequest{
    string id = 1; // tripID
}

message GetTripResponse{
    string id = 1; // tripID
    Trip trip = 2;
}

